<resources>
    <string name="app_name">Moeen</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unknowError">حاول فى وقت لاحق</string>
    <string name="on_boarding1">بضغطة زر تلاقينا</string>
    <string name="on_boarding2">معاك في اصعب الاوقات</string>
    <string name="on_boarding3">مٌعين..ابتسامتك علينا</string>
    <string name="next_button">Next Button</string>
    <string name="bottom_navigation1">المزيد</string>
    <string name="bottom_navigation2">الحجوزات</string>
    <string name="bottom_navigation3">الملف الطبى</string>
    <string name="home1">خدمات النقل</string>
    <string name="home2">خدمات الوفيات</string>
    <string name="home3">الخدمات الطبية</string>
    <string name="home4">كيفك اليوم؟؟</string>
    <string name="ambulance">نقل المرضي</string>
    <string name="how_are_you1">معدل السكر الطبيعي</string>
    <string name="noName">لا يوجد اسم</string>
    <string name="n">null</string>

    <string-array name="nationalities">
        <item>مصرى</item>
        <item>سعودى</item>
    </string-array>

    <string-array name="gender">
        <item>ذكر</item>
        <item>أنثى</item>
    </string-array>

    <string-array name="bloodType">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
</resources>