<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background_image">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/_30dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ivDrawerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:paddingStart="@dimen/_10dp"
        android:paddingEnd="@dimen/_10dp"
        android:paddingBottom="@dimen/_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline17">

        <ImageView
            android:id="@+id/ivDrawer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_8dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toTopOf="@+id/clBottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivDrawerLayout"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/_16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/_16dp" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vpHome"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/guideline16"
                app:layout_constraintStart_toStartOf="@+id/guideline15"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/tvMoveServices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_21dp"
                android:fontFamily="@font/cairo_semibold"
                android:text="@string/home1"
                android:textColor="@color/_3c"
                android:textSize="@dimen/_14sp"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/guideline16"
                app:layout_constraintTop_toBottomOf="@+id/vpHome"
                tools:visibility="visible"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMoveServices"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMoveServices"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/tvDeadServices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/cairo_semibold"
                android:text="@string/home2"
                android:textColor="@color/_3c"
                android:textSize="@dimen/_14sp"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/guideline16"
                app:layout_constraintTop_toBottomOf="@+id/rvMoveServices"
                tools:visibility="visible"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDeadServices"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDeadServices"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/tvMedicalServices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/cairo_semibold"
                android:text="@string/home3"
                android:textColor="@color/_3c"
                android:textSize="@dimen/_14sp"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/guideline16"
                app:layout_constraintTop_toBottomOf="@+id/rvDeadServices"
                tools:visibility="visible"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMedicalServices"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMedicalServices"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/tvHowAreYouToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/cairo_semibold"
                android:text="@string/home4"
                android:textColor="@color/_3c"
                android:textSize="@dimen/_14sp"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/guideline16"
                app:layout_constraintTop_toBottomOf="@+id/rvMedicalServices"
                tools:visibility="visible"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHowAreYouToday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHowAreYouToday"
                tools:visibility="visible"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backgroundTint="@color/Blue"
        app:layout_constraintBottom_toTopOf="@+id/clBottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/clBottomNavigation"
        app:maxImageSize="@dimen/_30dp"
        app:srcCompat="@drawable/ic_home_reservations"
        app:tint="@color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clBottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/bottom_navigation_background"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <LinearLayout
            android:id="@+id/moreHomeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/_8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivMoreHome"
                android:layout_width="20dp"
                android:layout_height="8dp"
                android:layout_marginBottom="@dimen/_8dp"
                app:srcCompat="@drawable/ic_home_more" />

            <TextView
                android:id="@+id/tvMoreHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_regular"
                android:text="@string/bottom_navigation1"
                android:textColor="@color/_70"
                android:textSize="@dimen/_10sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvReservationsHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_regular"
            android:text="@string/bottom_navigation2"
            android:textColor="@color/_70"
            android:textSize="@dimen/_10sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline13"
            app:layout_constraintEnd_toStartOf="@+id/guideline14"
            app:layout_constraintStart_toStartOf="@+id/guideline14" />

        <LinearLayout
            android:id="@+id/medicalProfileLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/_8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivMedicalProfileHome"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginBottom="@dimen/_8dp"
                app:srcCompat="@drawable/ic_home_profile" />

            <TextView
                android:id="@+id/tvMedicalProfileHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_regular"
                android:text="@string/bottom_navigation3"
                android:textColor="@color/_70"
                android:textSize="@dimen/_10sp" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/_16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>